--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://username.github.io/Coca",
+  "homepage": "https://k1rvl07.github.io/Coca",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "vite build",
-    "biome:check": "npx biome check --write .",
-    "biome:apply": "npx biome check --apply --write .",
-    "biome:unsafe": "npx biome check --unsafe --write .",
+    "biome": "npx biome check --unsafe --write .",
     "preview": "vite preview",
-    "watchStyles": "node frontend/src/utils/buildStyles/buildStyles.js",
-    "generate": "plop",
+    "buildStyles": "node frontend/src/utils/buildStyles/buildStyles.js",
     "server": "node backend/src/server.js",
-    "start": "kill-port 5000 5173 && concurrently -n \"DEV,SERVER,WATCH_STYLES\" --prefix-colors \"blue.bold,magenta.bold,green.bold\" --kill-others-on-fail --success first --restart-tries 3 \"npm run dev\" \"npm run server\" \"npm run watchStyles\""
+    "start": "kill-port 5000 5173 && concurrently -n \"DEV,SERVER,BUILD_STYLES\" --prefix-colors \"blue.bold,magenta.bold,green.bold\" --kill-others-on-fail --success first --restart-tries 3 \"npm run dev\" \"npm run server\" \"npm run buildStyles\""
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -36,7 +33,6 @@
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "cssnano": "^7.0.6",
-    "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -45,7 +41,6 @@
     "globals": "^15.9.0",
     "kill-port": "^2.0.1",
     "pg": "^8.13.3",
-    "plop": "^4.0.1",
     "postcss": "^8.4.47",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-pxtorem": "^6.1.0",
@@ -54,7 +49,6 @@
     "react-router-dom": "^7.1.1",
     "react-swipeable": "^7.0.1",
     "reactcci": "^1.14.0",
-    "rome": "^12.1.3",
     "sass": "^1.80.4",
     "sweetalert2": "^11.17.2",
     "vite": "^5.4.8"
