--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
     "kill-port": "^2.0.1",
+    "libphonenumber-js": "^1.12.7",
     "pg": "^8.13.3",
     "postcss": "^8.4.47",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-pxtorem": "^6.1.0",
     "postcss-sort-media-queries": "^5.2.0",
     "react-intersection-observer": "^9.13.1",
+    "react-phone-number-input": "^3.4.12",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.1",
     "react-swipeable": "^7.0.1",
